docs: add comment